Added #1 WorkerExecutor to process file encondig

--- a/src/test/resources/com/hxffe/gradle/build.gradle
+++ b/src/test/resources/com/hxffe/gradle/build.gradle
@@ -10,9 +10,11 @@ fileEncodings {
 	src {
 		fromEncoding = 'ISO-8859-1'
 		toEncoding = 'UTF-8'
+		target files('./', '../')
 	}
 	foo {
 		fromEncoding = 'ISO-8859-1'
 		toEncoding = 'UTF-8'
+		target files('./')
 	}
 }
